--- a/index.html
+++ b/index.html
@@ -1,136 +1,325 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przelewy bankowe QR Code</title>
 
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+      body {
+        font-family: "Arial", sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
+      form {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 300px;
+      }
 
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
+      label {
+        display: block;
+        margin-bottom: 8px;
+      }
 
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
+      input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
 
-        button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
+      button {
+        background-color: #003574;
+        color: #fff;
+        padding: 12px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 100%;
+      }
 
-        button:hover {
-            background-color: #45a049;
-        }
+      button:hover {
+        background-color: #004c9a;
+      }
 
-        #qrcode {
-            padding: 20px;
-            margin-top: 20px;
-            display: block;
-            max-width: 100%;
-            height: auto;
-        }
+      #qrcode {
+        padding: 20px;
+        margin-top: 20px;
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
 
-        #generated-text {
-            margin-top: 10px;
-            font-weight: bold;
-            display: none;
-            bottom: 10px;
-            width: 100%;
-            margin-top: 10px;
-            color: black;
-            font-weight: bold;
-            font-size: 14px;
-            text-align: left;
-            padding-top: 10px;
-            padding-bottom: 10px;
+      #generated-text {
+        margin-top: 10px;
+        font-weight: bold;
+        display: none;
+        bottom: 10px;
+        width: 100%;
+        margin-top: 10px;
+        color: black;
+        font-weight: bold;
+        font-size: 14px;
+        text-align: left;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        word-wrap: break-word;
+      }
 
-        }
+      #success-text {
+        margin-top: 10px;
+        font-weight: bold;
+        display: none;
+        bottom: 10px;
+        width: 100%;
+        margin-top: 10px;
+        color: #4caf50;
+        font-weight: bold;
+        text-align: center;
+      }
 
-        #success-text {
-            margin-top: 10px;
-            font-weight: bold;
-            display: none;
-            bottom: 10px;
-            width: 100%;
-            margin-top: 10px;
-            color: #4caf50;
-            font-weight: bold;
-            text-align: center;
-        }
+      #error-text {
+        margin-top: 10px;
+        font-weight: bold;
+        display: none;
+        bottom: 10px;
+        width: 100%;
+        margin-top: 10px;
+        color: #ff0000;
+        font-weight: bold;
+        text-align: center;
+      }
 
-        #error-text {
-            margin-top: 10px;
-            font-weight: bold;
-            display: none;
-            bottom: 10px;
-            width: 100%;
-            margin-top: 10px;
-            color: #ff0000;
-            font-weight: bold;
-            text-align: center;
-        }
+      .input-container {
+        display: flex;
+        position: relative;
+      }
+
+      .amount-input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 16px;
+        border: 1px solid #ccc;
+        border-radius: 4px 0px 0px 4px;
+        display: inline-block;
+      }
+
+      .calculator-button {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+        width: 38px;
+        height: 100%;
+        padding: 8px;
+        border: 1px solid #ccc;
+        color: #fff;
+        fill: #fff;
+        border: none;
+        border-radius: 0 4px 4px 0;
+        cursor: pointer;
+      }
+
+      /* Kalkulator */
+      .main-container {
+        display: none;
+        border-radius: 4px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding-bottom: 10px;
+      }
+
+      .calc-container {
+        display: grid;
+        border-radius: 4px;
+        width: 100%;
+      }
+
+
+      #buttons-container {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        text-align: center;
+      }
+
+      #calc-display {
+        overflow: hidden;
+        padding: 16px;
+        font-size: 2em;
+        text-align: right;
+        min-height: 1.2em;
+        display: flexbox;
+        flex-direction: column;
+        position: relative;
+        justify-content: flex-end;
+        align-items: center;
+        color: #fdfefe;
+        background-color: #003574;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        word-wrap: break-word;
+        transition: all 0.3s ease-in;
+      }
+
+      .btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 16px;
+        font-size: 1.2em;
+        cursor: pointer;
+        transition: all 0.3s ease-in;
+        border: 0.3px solid rgba(251, 253, 255, 0.171);
+      }
+
+      .btn-num {
+        background-color: #003574;
+        color: #9bb6d6;
+      }
+
+      .btn-num:hover {
+        background-color: #0969c9;
+      }
+
+      .btn-operator {
+        background-color: #3b8ea5;
+        color: #ffffff;
+      }
+
+      .btn-operator:hover {
+        background-color: rgb(52, 155, 196) !important;
+      }
+
+      .btn-clear {
+        background-color: #d81e5b;
+        color: #ffffff;
+      }
+
+      .btn-clear:hover {
+        background-color: #f8538a;
+      }
+
+      .zero {
+        grid-column: span 2;
+        border-bottom-left-radius: 4px;
+      }
+
+      .dot {
+        grid-column: span 2;
+      }
+
+      .equal {
+        grid-row: span 2;
+        background-color: #db912c;
+        border-bottom-right-radius: 4px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <form class="form-anticlear" onsubmit="generateQRCode(); return false;">
-        <label for="rachunek">Rachunek:</label>
-        <input type="text" id="rachunek" placeholder="Wprowadź rachunek">
+      <label for="rachunek">Rachunek:</label>
+      <input
+        type="text"
+        id="rachunek"
+        placeholder="Wprowadź rachunek odbiorcy"
+      />
 
-        <label for="kwota">Kwota:</label>
-        <input type="text" id="kwota" placeholder="Wprowadź kwotę">
+      <label for="rachunek">Kwota:</label>
+      <div class="input-container">
+        <input
+          type="text"
+          class="amount-input"
+          id="kwota"
+          placeholder="Wprowadź kwotę"
+        />
+        <button
+          type="button"
+          class="calculator-button"
+          title="Kalkulator"    
+          onclick="toggleCalculator()"
+        >
+          <svg
+            version="1.1"
+            id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 122.88 121.05"
+            style="enable-background: new 0 0 122.88 121.05"
+            xml:space="preserve"
+          >
+            <g>
+              <path
+                d="M105.43,92.42c0.85,0,1.61,0.34,2.17,0.9l0.04,0.05c0.53,0.55,0.85,1.3,0.85,2.12c0,0.85-0.34,1.61-0.9,2.17 c-0.55,0.55-1.32,0.9-2.17,0.9H77.28c-0.85,0-1.61-0.34-2.17-0.9c-0.55-0.55-0.9-1.32-0.9-2.17c0-0.84,0.34-1.61,0.9-2.16 c0.55-0.56,1.32-0.9,2.16-0.9H105.43L105.43,92.42z M20.77,80.74l-0.04-0.05c-0.57-0.59-0.85-1.35-0.85-2.12 c0-0.78,0.3-1.56,0.9-2.16v0c0.6-0.6,1.38-0.9,2.17-0.9s1.57,0.3,2.17,0.9l7.79,7.79l7.79-7.79c0.6-0.6,1.38-0.9,2.17-0.9 c0.78,0,1.57,0.3,2.17,0.9c0.6,0.6,0.9,1.38,0.9,2.17c0,0.78-0.3,1.57-0.9,2.17l-7.79,7.79L45,96.31c0.6,0.6,0.9,1.38,0.9,2.17 s-0.3,1.57-0.9,2.17c-0.6,0.6-1.38,0.9-2.17,0.9c-0.78,0-1.57-0.3-2.17-0.9l-7.79-7.79l-7.79,7.79c-0.6,0.6-1.38,0.9-2.17,0.9 s-1.57-0.3-2.17-0.9l-0.04-0.05c-0.57-0.59-0.85-1.35-0.85-2.12c0-0.78,0.3-1.56,0.9-2.16l7.79-7.79L20.77,80.74L20.77,80.74z M122.88,60.53v49.3c0,1.51-0.3,2.96-0.85,4.29c-0.57,1.38-1.41,2.61-2.44,3.65l-0.04,0.04c-1.03,1.02-2.25,1.84-3.6,2.4 c-1.32,0.55-2.77,0.85-4.29,0.85H11.23c-1.51,0-2.96-0.3-4.29-0.85c-1.37-0.57-2.61-1.41-3.65-2.44c-1.04-1.03-1.87-2.27-2.44-3.65 C0.3,112.78,0,111.33,0,109.82V11.23c0-1.51,0.3-2.96,0.85-4.29C1.43,5.57,2.26,4.33,3.3,3.3l0.04-0.04 c1.03-1.02,2.25-1.84,3.6-2.4C8.27,0.3,9.72,0,11.23,0h100.42c1.51,0,2.96,0.3,4.29,0.85c1.37,0.57,2.61,1.41,3.65,2.44 c1.04,1.03,1.87,2.27,2.44,3.65c0.55,1.32,0.85,2.77,0.85,4.29V60.53L122.88,60.53z M116.75,109.82V63.59H64.5v51.34h47.15 c0.69,0,1.35-0.14,1.94-0.39c0.62-0.26,1.19-0.64,1.66-1.12C116.18,112.5,116.75,111.22,116.75,109.82L116.75,109.82z M116.75,57.46V11.23c0-0.69-0.14-1.35-0.39-1.94c-0.26-0.62-0.64-1.19-1.12-1.66c-0.47-0.47-1.04-0.86-1.66-1.12 c-0.6-0.25-1.25-0.39-1.94-0.39H64.5v51.34H116.75L116.75,57.46z M6.13,11.23v46.23h52.25V6.13H11.23c-0.69,0-1.35,0.14-1.94,0.39 C8.67,6.77,8.1,7.15,7.63,7.63C6.7,8.55,6.13,9.83,6.13,11.23L6.13,11.23z M6.13,63.59v46.23c0,0.69,0.14,1.35,0.39,1.94 c0.26,0.62,0.64,1.19,1.12,1.66c0.47,0.47,1.04,0.86,1.66,1.12c0.6,0.25,1.25,0.39,1.94,0.39h47.15V63.59H6.13L6.13,63.59z M29.82,16.92c0-0.85,0.34-1.61,0.9-2.17c0.55-0.55,1.32-0.9,2.17-0.9c0.85,0,1.61,0.34,2.17,0.9c0.55,0.55,0.9,1.32,0.9,2.17 v11.01h11.01c0.85,0,1.61,0.34,2.17,0.9c0.55,0.55,0.9,1.32,0.9,2.17c0,0.85-0.34,1.61-0.9,2.17c-0.55,0.55-1.32,0.9-2.17,0.9 H35.95v11.01c0,0.85-0.34,1.61-0.9,2.17c-0.55,0.55-1.32,0.9-2.17,0.9c-0.85,0-1.61-0.34-2.17-0.9c-0.55-0.55-0.9-1.32-0.9-2.17 V34.06H18.81c-0.85,0-1.61-0.34-2.17-0.9c-0.55-0.55-0.9-1.32-0.9-2.17c0-0.85,0.34-1.61,0.9-2.17s1.32-0.9,2.17-0.9h11.01V16.92 L29.82,16.92z M105.43,27.93c0.85,0,1.61,0.34,2.17,0.9c0.55,0.55,0.9,1.32,0.9,2.17c0,0.85-0.34,1.61-0.9,2.17 c-0.55,0.55-1.32,0.9-2.17,0.9H77.28c-0.85,0-1.61-0.34-2.17-0.9c-0.55-0.55-0.9-1.32-0.9-2.17c0-0.85,0.34-1.61,0.9-2.17 c0.55-0.55,1.32-0.9,2.17-0.9H105.43L105.43,27.93z M105.43,79.02c0.85,0,1.61,0.34,2.17,0.9l0.04,0.05 c0.53,0.55,0.85,1.3,0.85,2.12c0,0.85-0.34,1.61-0.9,2.17c-0.55,0.55-1.32,0.9-2.17,0.9H77.28c-0.85,0-1.61-0.34-2.17-0.9 c-0.55-0.55-0.9-1.32-0.9-2.17c0-0.84,0.34-1.61,0.9-2.16c0.55-0.56,1.32-0.9,2.16-0.9H105.43L105.43,79.02z"
+              />
+            </g>
+          </svg>
+        </button>
+      </div>
 
-        <label for="odbiorca">Odbiorca:</label>
-        <input type="text" id="odbiorca" placeholder="Wprowadź odbiorcę">
+      <!-- Kalkulator -->
+      <div class="main-container" id="calc">
+        <div class="calc-container">
+          <div id="calc-display" class=""></div>
+          <div id="buttons-container">
+            <div class="btn btn-clear" onclick="clearInput()">C</div>
+            <div class="btn btn-operator" onclick="eraseNum()">&#9003;</div>
+            <div class="btn btn-operator" onclick="insertNum('/')">/</div>
+            <div class="btn btn-operator" onclick="insertNum('*')">x</div>
 
-        <label for="tytul">Tytuł:</label>
-        <input type="text" id="tytul" placeholder="Wprowadź tytuł">
+            <div class="btn btn-num" onclick="insertNum(7)">7</div>
+            <div class="btn btn-num" onclick="insertNum(8)">8</div>
+            <div class="btn btn-num" onclick="insertNum(9)">9</div>
+            <div class="btn btn-operator" onclick="insertNum('-')">-</div>
 
-        <button type="submit">Generuj kod QR</button>
+            <div class="btn btn-num" onclick="insertNum(4)">4</div>
+            <div class="btn btn-num" onclick="insertNum(5)">5</div>
+            <div class="btn btn-num" onclick="insertNum(6)">6</div>
+            <div class="btn btn-operator" onclick="insertNum('+')">+</div>
 
-        <!-- Napisy po wygenerowaniu -->
-        <div id="success-text">Wygenerowano!</div>
-        <div id="generated-text"></div>
-        <div id="error-text">Błąd generowania kodu QR. Spróbuj ponownie.</div>
-        <button type="button" style="display: none;" id="copy-text-button">Kopiuj tekst do schowka</button>
-        <div id="qrcode"></div>
-        <button type="button" style="display: none;" id="copy-qrcode-button">Kopiuj obrazek do schowka</button>
+            <div class="btn btn-num" onclick="insertNum(1)">1</div>
+            <div class="btn btn-num" onclick="insertNum(2)">2</div>
+            <div class="btn btn-num" onclick="insertNum(3)">3</div>
+            <div class="btn btn-operator equal" onclick="equalTo()">=</div>
+            <div class="btn btn-num zero" onclick="insertNum(0)">0</div>
+            <div class="btn btn-num" onclick="insertNum(',')">,</div>
+          </div>
+        </div>
+      </div>
+
+      <label for="odbiorca">Odbiorca:</label>
+      <input type="text" id="odbiorca" placeholder="Wprowadź odbiorcę" />
+
+      <label for="tytul">Tytuł:</label>
+      <input type="text" id="tytul" placeholder="Wprowadź tytuł przelewu" />
+
+      <button type="submit">Generuj kod QR</button>
+
+      <!-- Napisy po wygenerowaniu -->
+      <div id="success-text">Wygenerowano!</div>
+      <div id="generated-text"></div>
+      <div id="error-text">Błąd generowania kodu QR. Spróbuj ponownie.</div>
+      <button type="button" style="display: none" id="copy-text-button">
+        Kopiuj tekst do schowka
+      </button>
+      <div id="qrcode"></div>
+      <button type="button" style="display: none" id="copy-qrcode-button">
+        Kopiuj obrazek do schowka
+      </button>
     </form>
-    <!-- Load the library -->
     <script src="main.min.js"></script>
-</body>
-
+  </body>
 </html>
